--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@use-gesture/react": "^10.3.1",
     "canvas-confetti": "^1.9.4",
     "framer-motion": "^12.23.26",
+    "howler": "^2.2.4",
     "lucide-react": "^0.562.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
