--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@react-three/cannon": "^6.6.0",
     "@react-three/drei": "^10.7.7",
     "@react-three/fiber": "^9.5.0",
     "@react-three/postprocessing": "^3.0.4",
     "@use-gesture/react": "^10.3.1",
+    "cannon-es": "^0.20.0",
     "canvas-confetti": "^1.9.4",
     "framer-motion": "^12.23.26",
     "howler": "^2.2.4",
